# agent-shield

./: .gitignore  BEGINNERS_GUIDE.md  LICENSE  README.md  model-card.md  pyproject.toml  risk-assessment.md
agent_shield/: __init__.py  cli.py  emergency.py  formatters.py  frameworks.py  report.py  scanner.py
agent_shield/checks/: __init__.py  art14_human_oversight.py  art22_accountability.py  audit_logging.py  data_classification.py  documentation.py  error_handling.py  human_oversight.py  secrets.py
docs/: TAD.md
