[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-shield"
version = "0.1.0"
description = "Governance readiness scanner for AI agent projects"
readme = "README.md"
license = {text = "Business Source License 1.1"}
requires-python = ">=3.10"
authors = [
    {name = "Jesca Martaeng", email = "jesca@fluxai.dk"},
]
keywords = ["ai", "governance", "agents", "compliance", "eu-ai-act", "gdpr", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
agent-shield = "agent_shield.cli:main"

[project.urls]
Homepage = "https://github.com/fluxai-dk/agent-shield"
Documentation = "https://github.com/fluxai-dk/agent-shield/docs"
Repository = "https://github.com/fluxai-dk/agent-shield"

[tool.agent-shield]
responsible_party = "Jesca Martaeng <jesca@fluxai.dk>"
contact = "https://fluxai.dk"

[tool.setuptools.packages.find]
where = ["."]
